--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,189 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&family=Russo+One&display=swap');
+
+body {
+  font-family: "Heebo", sans-serif;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+  color: #333;
+}
+/* navbar */
+
+.navbar ul{
+  width: 90%;
+  display: flex;
+  justify-content: end;
+  padding-bottom: 4rem;
+}
+.navbar li{
+  list-style: none;
+  display: inline;
+  width: 5rem;
+}
+.navbar a {
+  text-decoration: none; 
+  color: black; 
+}
+.navbar a.active {
+  color: red; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/* general */
+.container{
+  width: 858px;
+  margin: 0 auto;
+}
+p{
+  font-weight: 400;
+}
+/* home */
+.header {
+  text-align: left;
+  padding: 2rem 0;
+}
+.profile{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.profile-left{
+  width: 497px;
+}
+.content-image{
+  width: 681px; 
+  height: auto; 
+  
+}
+.profile-img {
+  width: 243px;
+  height: 243px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: -4px 10px 0px rgba(237, 247, 250, 1);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.btn {
+  background: #ff6464;
+  color: white;
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+  width: 208px;
+  height: 47px;
+  font-size: 20px;
+}
+.recent-posts{
+  background: #EDF7FA;
+  padding: 20px ;
+  margin-top: 1.5rem;
+  color:#21243D;
+}
+.posts-cont{
+  display: flex;
+  gap: 1rem;
+}
+
+.post-card {
+  background: white;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  border-radius: 4px;
+  width: 418px;
+  height: 295px;
+  justify-content:center ;
+
+}
+.post-card h3, .work-item h3 {
+  margin: 0;
+}
+/* home-work */
+.work-item h3{
+  font-size: 30px;
+  text-decoration: none;
+}
+.work-item{
+  border-bottom: 1px solid #E0E0E0;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin-top: 2rem;
+}
+.meta {
+  color: #21243D;
+  font-size: 0.9rem;
+}
+.work-year{
+  background-color: #142850;
+  border-radius: 16px;
+  color: white;
+  padding: 0.2rem;
+  margin-right: 1rem;
+  font-size: 18px;
+}
+.work-tags{
+  color: #8695A4;
+  font-size: 20px;
+}
+
+/* footer */
+footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+}
+.footer-cont{
+  display: flex;
+  flex-direction: column;
+  padding: 5rem 0 1rem;
+}
+.icons {
+  height: 30px;
+  width: 30px;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  margin-bottom: 1em; 
 }
 
-.App-link {
-  color: #61dafb;
+footer a {
+  color: #21243D;
+  text-decoration: none; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* work */
+.container-work{
+  width: 682px;
+  margin: 0 auto;
+  color: #21243D;
+}
+.work-item a {
+  text-decoration: none;
+  color: #21243D; 
+}
+
+.work .work-item{
+  padding-bottom: 2rem;
+}
+
+/* work-detail */
+.work-detail-container{
+  width: 681px;
+  margin: 0 auto;
+}
+.work-detail h1{
+  width: 60%;
+}
+.work-detail .work-year{
+  background-color: #FF7C7C;
+}
+.work-detail .work-tags{
+  color: #21243D; 
+}
+.wd-text{
+  padding: 1rem  0 2rem 0;
 }
